--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
     extra_hosts:
-      - "host.docker.internal:172.21.0.2"
+      - "host.docker.internal:your_ip"
 
 
   pgadmin:
